--- a/client/Components/EncounterNew/EncounterNew.css
+++ b/client/Components/EncounterNew/EncounterNew.css
@@ -327,6 +327,18 @@
   background-color: white;
 }
 
+#monsters-selection {
+  position: relative;
+  padding-top: 120px;
+}
+
+#search-monsters {
+  height: 100px;
+  width: 50%;
+  position: absolute;
+  top: 5px;
+}
+
 .added-monster-name {
   width: 60%;
 }
