--- a/client/Components/Encounters/Encounters.css
+++ b/client/Components/Encounters/Encounters.css
@@ -25,6 +25,7 @@
   align-items: center;
   border: 5px solid black;
   text-decoration: none;
+  cursor: pointer;
   color: white;
   border-radius: 10px;
   background-color: #3f7d20;
@@ -60,6 +61,7 @@
   padding: 0 25px;
   text-align: center;
   text-decoration: none;
+  cursor: pointer;
   display: flex;
   align-items: center;
   border: 1px solid lightgray;
