updated data models for monsters and files to use new structure. Added a README to the project.

--- a/client/Components/Encounters/Encounters.css
+++ b/client/Components/Encounters/Encounters.css
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #D6D6D6;
 }
 
 #build-encounter-button-wrap {
@@ -23,12 +22,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 5px solid black;
   text-decoration: none;
   cursor: pointer;
-  color: white;
-  border-radius: 10px;
-  background-color: #3f7d20;
+  font-size: large;
+  border: 5px solid #6B778D;
+  color: #17223B;
+  background-color: #FF6768;
 }
 
 #all-encounters {
@@ -39,7 +38,6 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   overflow: auto;
-  background-color: #264C5E;
 }
 
 .encounter-display {
@@ -52,7 +50,9 @@
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: #420C14;
+  border: 5px solid #6B778D;
+  color: #CEC2AE;
+  background-color: #263859;
   color: white;
 }
 
@@ -64,6 +64,5 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  border: 1px solid lightgray;
   border-radius: 10px;
 }
