--- a/client/Components/Home/Home.css
+++ b/client/Components/Home/Home.css
@@ -1,22 +1,25 @@
 #home-page{
-  height: calc(100vh - 75px);
-  width: 100vw;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
 #opener {
   position: relative;
-  height: 70%;
+  height: 75vh;
   width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   font-size: 2em;
   font-family: 'MedievalSharp', sans-serif;
 }
 
 .opac-box {
-  padding: 15px 75px;
+  font-size: 84pt;
+  color: #CEC2AE;
   z-index: 2;
 }
 
@@ -24,6 +27,23 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: .7;
+  /* opacity: .7; */
   z-index: 1;
+}
+
+#home-site-description {
+  width: 90%;
+  text-align: center;
+  font-size: 20pt;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+#home-quick-sections {
+  width: 75%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 25px;
 }
