--- a/client/Components/Nav/Nav.css
+++ b/client/Components/Nav/Nav.css
@@ -1,11 +1,14 @@
 #nav {
+  width: 100%;
   height: 75px;
   padding: 0 15px;
   font-size: 22px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #264C5E;
+  border-bottom: #FF6768 2px solid;
+  color: #CEC2AE;
+  background-color: #263859;
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -24,23 +27,27 @@
   height: 100%;
   padding: 0 25px;
   text-align: center;
-  color: #CEC2AE;
   text-decoration: none;
   display: flex;
   align-items: center;
+  color: #CEC2AE;
+  background-color: inherit;
 }
 
 #nav .nav-links:hover {
-  background-color: #E94445;
+  color: #17223B;
+  background-color: #FF6768;
 }
 
 .active {
-  background-color: #E94445;
+  color: #17223B;
+  background-color: #FF6768;
 }
 
 .login_logout {
   height: 40px;
   font-size: 20px;
   margin-left: 20px;
-  background-color: #E94445;
+  cursor: pointer;
+  background-color: #FF6768;
 }
