--- a/client/Components/Stuff/Stuff.css
+++ b/client/Components/Stuff/Stuff.css
@@ -1,19 +1,35 @@
 #my-stuff {
   min-height: calc(100vh - 125px);
   width: 100%;
-  padding: 25px;
+  padding-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.collections-groups {
+  width: 100%;
+  padding: 5px 25px 25px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: #D6D6D6;
 }
 
 .collections {
   width: 30%;
-  height: 150px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #CEC2AE;
+  border-radius: 20px;
+  border: 5px solid #6B778D;
+  color: #CEC2AE;
+  background-color: #263859;
+}
+
+.collections-buttons {
+  padding: 5px 15px;
+  font-size: 12pt;
 }
