--- a/static/main.css
+++ b/static/main.css
@@ -101,13 +101,9 @@ form {
   color: #FAFDED;
 }
 
-/* button, Link, a {
-  text-decoration: none;
-  border: none;
-  cursor: pointer;
-  color: #17223B;
-  background-color: #FF6768;
-} */
+option {
+  background-color: #263859;
+}
 
 .medium-logo {
   height: 60px;
@@ -164,9 +160,114 @@ form {
   opacity: 1;
 }
 
+.btn-type-2 {
+  font-size: 16pt;
+  font-weight: 600;
+  border: 4px solid #17223B;
+  padding: 5px 20px 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: inherit;
+  text-decoration: none;
+  margin: 5px;
+}
+
+.btn-type-2-hover {
+  border-radius: 2px;
+  position: relative;
+  color: inherit;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.btn-type-2-hover:before {
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: "";
+  z-index: -2;
+}
+.btn-type-2-hover:hover {
+  background-color: #17223B;
+  color: #CEC2AE;
+}
+.btn-type-2-hover:hover:before {
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+}
+.btn-type-2-hover:focus {
+  background-color: #17223B;
+  color: #CEC2AE;
+}
+.btn-type-2-hover:focus:before {
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+}
+
+.btn-type-3 {
+  font-size: 16pt;
+  border: 4px solid #08A045;
+  padding: 3px 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: inherit;
+  text-decoration: none;
+  margin: 5px;
+}
+
+.btn-type-3-hover {
+  border-radius: 2px;
+  position: relative;
+  color: inherit;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.btn-type-3-hover:before {
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: "";
+  z-index: -2;
+}
+.btn-type-3-hover:hover {
+  background-color: #08A045;
+  color: #CEC2AE;
+}
+.btn-type-3-hover:hover:before {
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+}
+.btn-type-3-hover:focus {
+  background-color: #08A045;
+  color: #CEC2AE;
+}
+.btn-type-3-hover:focus:before {
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+}
+
 .unavailable {
   background-color: #707070;
-  opacity: .5;
+  opacity: .7;
   cursor: default;
   pointer-events: none;
 }
@@ -189,7 +290,7 @@ form {
   text-align: center;
   font-size: 18pt;
   border-radius: 20px;
-  border: 5px solid #6B778D;
+  /* border: 5px solid #263859; */
   color: #CEC2AE;
-  background-color: #263859;
+  background-color: #6B778D;
 }
