--- a/static/guide/guide.css
+++ b/static/guide/guide.css
@@ -1,6 +1,7 @@
 .guide-title {
   width: 100%;
   height: 110px;
+  padding-left: 25%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -9,19 +10,20 @@
 
 .guide-back-btn {
   position: absolute;
-  top: 50px;
+  top: 25px;
   left: 5%;
 }
 
 .guide-body {
   width: 100%;
+  padding-left: 3%;
   display: flex;
   justify-content: space-evenly;
 }
 
 #guide-filters {
   height: fit-content;
-  width: 25%;
+  width: 27%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +44,7 @@
 
 #guide-result-head {
   height: 60px;
-  width: 90%;
+  width: 91%;
   color: #264C5E;
   background-color: inherit;
   pointer-events: none;
@@ -51,7 +53,7 @@
 }
 
 .guide-result {
-  width: 87%;
+  width: 88%;
   min-height: 50px;
   font-size: 16pt;
   text-align: center;
@@ -73,7 +75,7 @@
 }
 
 .guide-result:hover {
-  width: 94%;
+  width: 95%;
   height: 55px;
 }
 
