--- a/static/main.css
+++ b/static/main.css
@@ -17,33 +17,32 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
+  background: linear-gradient(-45deg, #c52e09, #fc6a05, #ffab06, #f75206);
+	background-size: 400% 400%;
+	animation: gradient 6s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .page-layout-2 {
-  width: 100%;
-  padding-top: 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.page-layout-3 {
-  min-height: calc(100vh - 125px);
+  min-height: calc(100vh - 75px);
   width: 100%;
   padding-top: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
-}
-
-.page-layout-4 {
-  min-height: 100%;
-  width: 100%;
-  padding-bottom: 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #DDECF8;
 }
 
 .title-1 {
@@ -97,8 +96,7 @@ form {
 }
 
 .form-piece > input::placeholder {
-  opacity: .35;
-  color: #FAFDED;
+  color: #CEC2AE;
 }
 
 option {
@@ -114,7 +112,6 @@ option {
   border: 3px solid #FF6768;
   padding: 5px 22px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: inherit;
   text-decoration: none;
 }
 
@@ -164,7 +161,7 @@ option {
   font-size: 16pt;
   font-weight: 600;
   border: 4px solid #17223B;
-  padding: 5px 20px 3px;
+  padding: 7px 20px 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background-color: inherit;
   text-decoration: none;
@@ -215,10 +212,14 @@ option {
 
 .btn-type-3 {
   font-size: 16pt;
+  font-weight: 600;
   border: 4px solid #08A045;
-  padding: 3px 20px;
+  padding: 5px 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background-color: inherit;
+}
+
+.btn-type-3-hover {
   text-decoration: none;
   margin: 5px;
 }
@@ -274,22 +275,26 @@ option {
 
 .collections-display {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  grid-auto-rows: 300px;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin: 25px 0;
 }
 
 .collections {
-  width: 65%;
-  height: 200px;
+  width: 31%;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  padding: 20px 0;
   text-align: center;
   font-size: 18pt;
   border-radius: 20px;
+  gap: 10px;
   /* border: 5px solid #263859; */
   color: #CEC2AE;
   background-color: #6B778D;
