--- a/static/nav.css
+++ b/static/nav.css
@@ -29,13 +29,8 @@
   background-color: inherit;
 }
 
-#main-nav .nav-links:hover {
-  color: #17223B;
-  background-color: #FF6768;
-}
-
 .active {
-  color: #CEC2AE;
+  color: #17223B;
   background-color: #FF6768;
 }
 
@@ -45,5 +40,7 @@
   font-weight: bold;
   margin-left: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #FF6768;
+  color: #CEC2AE;
+  border: 3px solid #FF6768;
+  /* background-color: #FF6768; */
 }
