added footer to pages

--- a/client/index.css
+++ b/client/index.css
@@ -8,7 +8,7 @@
   width: 100vw;
   font-family: 'Josefin Sans', sans-serif;
   overflow: auto;
-  background-color: #FAFDED;
+  background-color: #DDECF8;
 }
 
 form {
