--- a/static/home.css
+++ b/static/home.css
@@ -3,10 +3,12 @@
   height: 75vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 2em;
   font-family: 'MedievalSharp', sans-serif;
+  background-color: black;
 }
 
 .opac-box {
@@ -15,11 +17,17 @@
   z-index: 2;
 }
 
+.opener-tagline {
+  font-size: 64pt;
+  color: #CEC2AE;
+  z-index: 2;
+}
+
 #opener-img {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* opacity: .7; */
+  opacity: .8;
   z-index: 1;
 }
 
