--- a/static/main.css
+++ b/static/main.css
@@ -3,21 +3,22 @@
 #app {
   min-height: 100vh;
   max-width: 100vw;
-  padding-bottom: 150px;
   overflow: auto;
   font-family: 'Josefin Sans', sans-serif;
   position: relative;
   overflow: auto;
-  background-color: #DDECF8;
+  background-color: #DCEBF9;
 }
 
 .page-layout-1 {
   width: 100%;
+  padding-bottom: 100px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  background-color: #DDECF8;
+  background-color: #DCEBF9;
   /* background: linear-gradient(-45deg, #c52e09, #fc6a05, #ffab06, #f75206); */
   /* background: linear-gradient(-45deg, #263859, #1B9AAA, #263859);
 	background-size: 400% 400%;
@@ -37,14 +38,15 @@
 } */
 
 .page-layout-2 {
-  /* min-height: calc(100vh - 75px); */
   width: 100%;
   padding-top: 25px;
+  padding-bottom: 100px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
-  background-color: #DDECF8;
+  background-color: #DCEBF9;
 }
 
 .title-1 {
@@ -277,9 +279,15 @@ option {
   opacity: 1;
 }
 
+.create-btn {
+  position: absolute;
+  right: 40px;
+  top: 15px;
+}
+
 .unavailable {
   background-color: #707070;
-  opacity: .7;
+  opacity: .3;
   cursor: default;
   pointer-events: none;
 }
@@ -304,10 +312,36 @@ option {
   padding: 20px 0;
   text-align: center;
   font-size: 18pt;
-  border-radius: 20px;
+  border-radius: 7px;
   gap: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   /* border: 5px solid #263859; */
   z-index: 2;
-  color: #CEC2AE;
-  background-color: #6B778D;
+  color: black;
+  background-color: #DDE0E4;
+}
+
+.dashboard {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin: 25px 0;
+}
+
+.dashboard-item {
+  min-height: 250px;
+  width: 400px;
+  padding: 5px 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 16pt;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: #DDE0E4;
 }
