--- a/static/users/sign-page.css
+++ b/static/users/sign-page.css
@@ -3,6 +3,7 @@
 .login-register-page {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
   font-family: 'MedievalSharp';
   display: flex;
   align-items: center;
