--- a/client/index.css
+++ b/client/index.css
@@ -22,6 +22,6 @@ button, Link, a {
   text-decoration: none;
   border: none;
   cursor: pointer;
-  color: #17223B;
-  background-color: #FF6768;
+  color: #13324A;
+  background-color: #E8413C;
 }
