--- a/client/Components/EncounterRun/EncounterRun.css
+++ b/client/Components/EncounterRun/EncounterRun.css
@@ -31,7 +31,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #264C5E;
+  background-color: #1E4E73;
   color: white;
 }
 
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #264C5E;
+  background-color: #1E4E73;
   color: white;
 }
 
