--- a/client/Components/Specs/MonsterSpecs.css
+++ b/client/Components/Specs/MonsterSpecs.css
@@ -11,7 +11,7 @@
   height: 5px;
   width: 95%;
   margin: 10px 2.5%;
-  background-color: #264C5E;
+  background-color: #1E4E73;
   border-radius: 50%;
 }
 
