--- a/client/Components/Stuff/Stuff.css
+++ b/client/Components/Stuff/Stuff.css
@@ -24,9 +24,9 @@
   align-items: center;
   justify-content: space-evenly;
   border-radius: 20px;
-  border: 5px solid #6B778D;
+  border: 5px solid #4F5E69;
   color: #CEC2AE;
-  background-color: #263859;
+  background-color: #1E4E73;
 }
 
 .collections-buttons {
