--- a/client/Components/StuffNav/StuffNav.css
+++ b/client/Components/StuffNav/StuffNav.css
@@ -3,7 +3,7 @@
   padding: 0 15px;
   display: flex;
   align-items: center;
-  background-color: #6B778D;
+  background-color: #4F5E69;
 }
 
 .stuff-nav-links {
@@ -11,6 +11,6 @@
 }
 
 .stuff-nav-links:hover, .stuff-nav-links:active {
-  color: #263859;
-  background-color: #FF6768;
+  color: #1E4E73;
+  background-color: #E8413C;
 }
