--- a/static/footer.css
+++ b/static/footer.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   color: #CEC2AE;
-  background-color: #263859;
+  background-color: #13324A;
 }
 
 #copyright-stuff {
