--- a/static/guide/guide.css
+++ b/static/guide/guide.css
@@ -31,7 +31,7 @@
   margin-top: 25px;
   padding: 20px 0;
   color: #CEC2AE;
-  background-color: #6B778D;
+  background-color: #4F5E69;
 }
 
 .guide-results {
@@ -49,7 +49,7 @@
   padding: 0 2%;
   margin: 0;
   color: #CEC2AE;
-  background-color: #263859;
+  background-color: #1E4E73;
 }
 
 .guide-result {
@@ -70,7 +70,7 @@
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
-  color: #264C5E;
+  color: #1E4E73;
   background-color: inherit;
 }
 
@@ -100,7 +100,7 @@
   height: 5px;
   width: 95%;
   margin: 10px 2.5%;
-  background-color: #264C5E;
+  background-color: #1E4E73;
   border-radius: 50%;
 }
 
@@ -116,7 +116,7 @@
   align-items: center;
   border-radius: 10px;
   color: #CEC2AE;
-  background-color: #264C5E;
+  background-color: #1E4E73;
 }
 
 .close-info-button {
