--- a/static/main.css
+++ b/static/main.css
@@ -20,7 +20,7 @@
   gap: 50px;
   background-color: #DCEBF9;
   /* background: linear-gradient(-45deg, #c52e09, #fc6a05, #ffab06, #f75206); */
-  /* background: linear-gradient(-45deg, #263859, #1B9AAA, #263859);
+  /* background: linear-gradient(-45deg, #1E4E73, #1B9AAA, #1E4E73);
 	background-size: 400% 400%;
 	animation: gradient 6s ease infinite; */
 }
@@ -40,7 +40,7 @@
 .page-layout-2 {
   width: 100%;
   padding-top: 25px;
-  padding-bottom: 100px;
+  padding-bottom: 125px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -90,9 +90,13 @@ form {
 .form-piece > input, .form-piece > select {
   font-size: 12pt;
   padding: 7px;
-  border: 5px solid #263859;
+  border: 5px solid #13324A;
   color: #CEC2AE;
   background-color: inherit;
+}
+
+.form-piece > input:focus, .form-piece > select:focus {
+  outline: none;
 }
 
 .form-piece > label {
@@ -104,7 +108,7 @@ form {
 }
 
 option {
-  background-color: #263859;
+  background-color: #13324A;
 }
 
 .small-logo {
@@ -122,7 +126,7 @@ option {
 }
 
 .btn-type-1 {
-  border: 3px solid #FF6768;
+  border: 3px solid #E8413C;
   padding: 5px 22px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   text-decoration: none;
@@ -149,8 +153,8 @@ option {
   z-index: -2;
 }
 .btn-type-1-hover:hover {
-  background-color: #FF6768;
-  color: #17223B;
+  background-color: #E8413C;
+  color: #13324A;
 }
 .btn-type-1-hover:hover:before {
   -webkit-transition: 0.5s all ease;
@@ -160,8 +164,8 @@ option {
   opacity: 1;
 }
 .btn-type-1-hover:focus {
-  background-color: #FF6768;
-  color: #17223B;
+  background-color: #E8413C;
+  color: #13324A;
 }
 .btn-type-1-hover:focus:before {
   transition: 0.5s all ease;
@@ -173,7 +177,7 @@ option {
 .btn-type-2 {
   font-size: 16pt;
   font-weight: 600;
-  border: 4px solid #17223B;
+  border: 4px solid #13324A;
   padding: 7px 20px 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background-color: inherit;
@@ -202,7 +206,7 @@ option {
   z-index: -2;
 }
 .btn-type-2-hover:hover {
-  background-color: #17223B;
+  background-color: #13324A;
   color: #CEC2AE;
 }
 .btn-type-2-hover:hover:before {
@@ -213,7 +217,7 @@ option {
   opacity: 1;
 }
 .btn-type-2-hover:focus {
-  background-color: #17223B;
+  background-color: #13324A;
   color: #CEC2AE;
 }
 .btn-type-2-hover:focus:before {
@@ -315,7 +319,7 @@ option {
   border-radius: 7px;
   gap: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  /* border: 5px solid #263859; */
+  /* border: 5px solid #1E4E73; */
   z-index: 2;
   color: black;
   background-color: #DDE0E4;
