--- a/static/nav.css
+++ b/static/nav.css
@@ -6,9 +6,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: #FF6768 2px solid;
+  border-bottom: #E8413C 2px solid;
   color: #CEC2AE;
-  background-color: #263859;
+  background-color: #13324A;
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -25,13 +25,14 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  border-radius: 2px 2px 0 0;
   color: #CEC2AE;
   background-color: inherit;
 }
 
 .active {
-  color: #17223B;
-  background-color: #FF6768;
+  color: #13324A;
+  background-color: #E8413C;
 }
 
 .login-logout {
@@ -41,6 +42,6 @@
   margin-left: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   color: #CEC2AE;
-  border: 3px solid #FF6768;
-  /* background-color: #FF6768; */
+  border: 3px solid #E8413C;
+  /* background-color: #E8413C; */
 }
