changed last color to fit in pallete, removed commented out styling

--- a/static/stuff-nav.css
+++ b/static/stuff-nav.css
@@ -3,7 +3,7 @@
   padding: 0 15px;
   display: flex;
   align-items: center;
-  background-color: #4F5E69;
+  background-color: #577993;
 }
 
 .stuff-nav-links {
