--- a/static/guide/guide.css
+++ b/static/guide/guide.css
@@ -19,19 +19,19 @@
   padding-left: 3%;
   display: flex;
   justify-content: space-evenly;
+  position: relative;
 }
 
 #guide-filters {
   height: fit-content;
   width: 27%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 5px;
+  position: sticky;
+  top: 20px;
   margin-top: 25px;
   padding: 20px 0;
   color: #CEC2AE;
-  background-color: #4F5E69;
+  background-color: #577993;
 }
 
 .guide-results {
@@ -57,9 +57,6 @@
   min-height: 50px;
   font-size: 16pt;
   text-align: center;
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 2.25fr;
