--- a/static/users/sign-page.css
+++ b/static/users/sign-page.css
@@ -43,7 +43,7 @@
   align-items: center;
   justify-content: space-evenly;
   color: #CEC2AE;
-  background-color: #4F5E69;
+  background-color: #577993;
 }
 
 
