updated design of static pages

--- a/client/Components/EncounterSummary/EncounterSummary.css
+++ b/client/Components/EncounterSummary/EncounterSummary.css
@@ -34,7 +34,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: #CEC2AE;
+  color: #B8B8B8;
   background-color: #E94445;
 }
 
