--- a/client/Components/Encounters/Encounters.css
+++ b/client/Components/Encounters/Encounters.css
@@ -51,7 +51,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   border: 5px solid #4F5E69;
-  color: #CEC2AE;
+  color: #B8B8B8;
   background-color: #1E4E73;
   color: white;
 }
