--- a/client/Components/Home/Home.css
+++ b/client/Components/Home/Home.css
@@ -1,25 +1,25 @@
-#home-page{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
-}
-
 #opener {
   position: relative;
   height: 75vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 2em;
   font-family: 'MedievalSharp', sans-serif;
+  background-color: black;
 }
 
 .opac-box {
   font-size: 84pt;
-  color: #CEC2AE;
+  color: #B8B8B8;
+  z-index: 2;
+}
+
+.opener-tagline {
+  font-size: 64pt;
+  color: #B8B8B8;
   z-index: 2;
 }
 
@@ -27,7 +27,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  /* opacity: .7; */
+  opacity: .8;
   z-index: 1;
 }
 
@@ -39,11 +39,4 @@
   flex-direction: column;
   align-items: center;
   gap: 25px;
-}
-
-#home-quick-sections {
-  width: 75%;
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 25px;
 }
