--- a/client/Components/Nav/Nav.css
+++ b/client/Components/Nav/Nav.css
@@ -1,4 +1,4 @@
-#nav {
+#main-nav {
   width: 100%;
   height: 75px;
   padding: 0 15px;
@@ -7,20 +7,15 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: #E8413C 2px solid;
-  color: #CEC2AE;
-  background-color: #1E4E73;
+  color: #B8B8B8;
+  background-color: #13324A;
   font-family: 'MedievalSharp', sans-serif;
 }
 
-.nav-divs {
+.main-nav-divs {
   height: 100%;
   display: flex;
   align-items: center;
-}
-
-.nav-logo {
-  height: 60px;
-  margin-right: 10px;
 }
 
 .nav-links {
@@ -30,13 +25,10 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: #CEC2AE;
+  box-shadow: none;
+  border-radius: 2px 2px 0 0;
+  color: #B8B8B8;
   background-color: inherit;
-}
-
-#nav .nav-links:hover {
-  color: #13324A;
-  background-color: #E8413C;
 }
 
 .active {
@@ -44,10 +36,12 @@
   background-color: #E8413C;
 }
 
-.login_logout {
+.login-logout {
   height: 40px;
   font-size: 20px;
+  font-weight: bold;
   margin-left: 20px;
-  cursor: pointer;
-  background-color: #E8413C;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  color: #B8B8B8;
+  border: 3px solid #E8413C;
 }
