--- a/static/guide/guide.css
+++ b/static/guide/guide.css
@@ -1,6 +1,6 @@
 .guide-title {
   width: 100%;
-  height: 110px;
+  height: 85px;
   padding-left: 25%;
   position: relative;
   display: flex;
@@ -18,57 +18,66 @@
   width: 100%;
   padding-left: 3%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: relative;
 }
 
 #guide-filters {
   height: fit-content;
-  width: 27%;
+  width: 22%;
   gap: 5px;
   position: sticky;
   top: 20px;
   margin-top: 25px;
   padding: 20px 0;
-  color: #CEC2AE;
-  background-color: #577993;
+  /* color: #B8B8B8; */
+  /* background-color: #577993; */
+}
+
+#clear-btn {
+  font-size: 12pt;
+  font-weight: 400;
+  padding: 5px 12px;
+  margin: 2px;
 }
 
 .guide-results {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 25px;
+  width: 75%;
+  display: table;
 }
 
 #guide-result-head {
-  height: 60px;
-  width: 91%;
+  height: 65px;
+  width: 94%;
+  padding: 0 calc(3% + 15px);
   pointer-events: none;
-  padding: 0 2%;
-  margin: 0;
-  color: #CEC2AE;
+  color: #B8B8B8;
   background-color: #1E4E73;
 }
 
 .guide-result {
   width: 88%;
   min-height: 50px;
+  margin: 15px auto;
   font-size: 16pt;
   text-align: center;
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 2.25fr;
+  grid-template-columns: 1.75fr 1.35fr;
   grid-auto-columns: 1fr;
   align-items: center;
-  padding: 9px 15px 9px 10px;
+  padding: 9px 15px 9px;
   transition: all .5s ease;
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   color: #1E4E73;
   background-color: inherit;
+}
+
+.result-name {
+  font-weight: 700;
+  font-size: 20pt;
 }
 
 .guide-result:hover {
@@ -112,7 +121,7 @@
   display: flex;
   align-items: center;
   border-radius: 10px;
-  color: #CEC2AE;
+  color: #B8B8B8;
   background-color: #1E4E73;
 }
 
