--- a/static/main.css
+++ b/static/main.css
@@ -46,223 +46,62 @@
   font-weight: 600;
 }
 
-form {
-  font-size: 15pt;
+.btn {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: fit-content;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s ease all;
+  border: none;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
   border-radius: 2px;
 }
 
-.form-header {
-  font-size: 20pt;
-  font-weight: 600;
-}
-
-.form-piece{
-  width: 75%;
-  margin-bottom: 15px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.form-piece > input, .form-piece > select {
-  font-size: 12pt;
-  padding: 7px;
-  border: 5px solid #13324A;
-  color: #CEC2AE;
-  background-color: inherit;
-}
-
-.form-piece > input:focus, .form-piece > select:focus {
-  outline: none;
-}
-
-.form-piece > label {
-  margin-left: 12px;
-}
-
-.form-piece > input::placeholder {
-  color: #CEC2AE;
-}
-
-option {
-  background-color: #13324A;
-}
-
-.small-logo {
-  height: 40px;
-  margin-right: 7px;
-}
-
-.medium-logo {
-  height: 60px;
-  margin-right: 10px;
-}
-
-.large-logo {
-  height: 90px;
+.btn:hover {
+  cursor: pointer;
 }
 
 .btn-type-1 {
-  border: 3px solid #E8413C;
-  padding: 5px 22px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  text-decoration: none;
-}
-
-.btn-type-1-hover {
-  border-radius: 2px;
-  position: relative;
-  color: inherit;
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-}
-.btn-type-1-hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  right: 50%;
-  bottom: 0;
-  opacity: 0;
-  content: "";
-  z-index: -2;
-}
-.btn-type-1-hover:hover {
-  background-color: #E8413C;
-  color: #13324A;
-}
-.btn-type-1-hover:hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
-}
-.btn-type-1-hover:focus {
-  background-color: #E8413C;
-  color: #13324A;
-}
-.btn-type-1-hover:focus:before {
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
+  font-size: 16pt;
+  font-weight: 600;
+  padding: 10px 23px;
+  background-color: inherit;
 }
 
 .btn-type-2 {
-  font-size: 16pt;
+  font-size: 14pt;
   font-weight: 600;
+  padding: 7px 15px;
+  margin: 5px;
+}
+
+.btn-color-1 {
+  background: linear-gradient(#0000, rgb(0 0 0/50%)) top/100% 800%;
+  background-color: #1E4E73;
+  color: #B8B8B8;
+}
+.btn-color-1:hover {
+  background-position: bottom;
+}
+
+.btn-color-2 {
   border: 4px solid #13324A;
-  padding: 7px 20px 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background-color: inherit;
-  text-decoration: none;
-  margin: 5px;
+  color: #B8B8B8;
 }
-
-.btn-type-2-hover {
-  border-radius: 2px;
-  position: relative;
-  color: inherit;
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-}
-.btn-type-2-hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  right: 50%;
-  bottom: 0;
-  opacity: 0;
-  content: "";
-  z-index: -2;
-}
-.btn-type-2-hover:hover {
+.btn-color-2:hover {
   background-color: #13324A;
-  color: #CEC2AE;
-}
-.btn-type-2-hover:hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
-}
-.btn-type-2-hover:focus {
-  background-color: #13324A;
-  color: #CEC2AE;
-}
-.btn-type-2-hover:focus:before {
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
+  color: #B8B8B8;
 }
 
-.btn-type-3 {
-  font-size: 16pt;
-  font-weight: 600;
-  border: 4px solid #08A045;
-  padding: 5px 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: inherit;
-}
-
-.btn-type-3-hover {
-  text-decoration: none;
-  margin: 5px;
-}
-
-.btn-type-3-hover {
-  border-radius: 2px;
-  position: relative;
-  color: inherit;
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-}
-.btn-type-3-hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  right: 50%;
-  bottom: 0;
-  opacity: 0;
-  content: "";
-  z-index: -2;
-}
-.btn-type-3-hover:hover {
+.btn-color-3 {
+  background: linear-gradient(#0000, rgb(0 0 0/50%)) top/100% 800%;
   background-color: #08A045;
-  color: #CEC2AE;
+  color: #B8B8B8;
 }
-.btn-type-3-hover:hover:before {
-  -webkit-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
-}
-.btn-type-3-hover:focus {
-  background-color: #08A045;
-  color: #CEC2AE;
-}
-.btn-type-3-hover:focus:before {
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
+.btn-color-3:hover {
+  background-position: bottom;
 }
 
 .create-btn {
@@ -277,6 +116,77 @@ option {
   cursor: default;
   pointer-events: none;
 }
+
+.small-logo {
+  height: 40px;
+  margin-right: 7px;
+}
+
+.medium-logo {
+  height: 50px;
+  margin-right: 10px;
+}
+
+.large-logo {
+  height: 90px;
+}
+
+form {
+  font-size: 15pt;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1); */
+  border-radius: 2px;
+}
+
+.form-header {
+  font-size: 20pt;
+  font-weight: 600;
+}
+
+.form-piece{
+  width: 75%;
+  margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px; 
+}
+
+.form-piece label {
+  width: 100%;
+}
+
+.full-form {
+  width: 100%;
+}
+
+.split-form {
+  width: 80px;
+}
+
+.form-piece > input, .form-piece > select {
+  font-size: 11pt;
+  padding: 6px;
+  border: 5px solid #13324A;
+  /* color: #B8B8B8; */
+  background-color: inherit;
+}
+
+.form-piece > input:focus, .form-piece > select:focus {
+  outline: none;
+}
+
+.form-piece > label {
+  margin-left: 12px;
+}
+
+/* option {
+  background-color: #13324A;
+} */
 
 .collections-display {
   width: 100%;
@@ -298,12 +208,13 @@ option {
   padding: 20px 0;
   text-align: center;
   font-size: 18pt;
-  border-radius: 7px;
+  font-weight: 600;
+  border-radius: 4px;
   gap: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   z-index: 2;
   color: black;
-  background-color: #DDE0E4;
+  background-color: #EBEBEB;
 }
 
 .dashboard {
@@ -328,5 +239,5 @@ option {
   font-size: 16pt;
   border-radius: 3px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #DDE0E4;
+  background-color: #B8B8B8;
 }
