updated input button styling

--- a/static/home.css
+++ b/static/home.css
@@ -13,13 +13,13 @@
 
 .opac-box {
   font-size: 84pt;
-  color: #B8B8B8;
+  color: #EBEBEB;
   z-index: 2;
 }
 
 .opener-tagline {
   font-size: 64pt;
-  color: #B8B8B8;
+  color: #EBEBEB;
   z-index: 2;
 }
 
