--- a/static/footer.css
+++ b/static/footer.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #B8B8B8;
+  color: #EBEBEB;
   background-color: #13324A;
 }
 
@@ -32,7 +32,7 @@
 
 .social-img {
   height: 40px;
-  border: 1px #B8B8B8 solid;
+  border: 1px #EBEBEB solid;
   border-radius: 50%;
-  background-color: #B8B8B8;
+  background-color: #EBEBEB;
 }
