--- a/static/guide/guide.css
+++ b/static/guide/guide.css
@@ -8,12 +8,6 @@
   align-items: center;
 }
 
-.guide-back-btn {
-  position: absolute;
-  top: 25px;
-  left: 5%;
-}
-
 .guide-body {
   width: 100%;
   padding-left: 3%;
@@ -28,7 +22,6 @@
   gap: 5px;
   position: sticky;
   top: 20px;
-  margin-top: 25px;
   padding: 20px 0;
   /* color: #B8B8B8; */
   /* background-color: #577993; */
@@ -51,8 +44,8 @@
   width: 94%;
   padding: 0 calc(3% + 15px);
   pointer-events: none;
-  color: #B8B8B8;
-  background-color: #1E4E73;
+  color: #EBEBEB;
+  background-color: #286A9C;
 }
 
 .guide-result {
@@ -71,8 +64,9 @@
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
-  color: #1E4E73;
+  color: #286A9C;
   background-color: inherit;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
 .result-name {
