--- a/static/nav.css
+++ b/static/nav.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: #E8413C 2px solid;
-  color: #B8B8B8;
+  color: #EBEBEB;
   background-color: #13324A;
   font-family: 'MedievalSharp', sans-serif;
 }
@@ -29,17 +29,18 @@
   -webkit-transition: 0.3s all ease;
   transition: 0.3s ease all;
   box-shadow: none !important;
-  color: #B8B8B8;
+  background: linear-gradient(#0000, rgb(0 0 0/15%)) top/100% 800%;
+  color: #EBEBEB;
   background-color: inherit;
 }
 
 .nav-links:hover {
-  color: #B8B8B8;
+  background-position: bottom;
   background-color: #E8413C;
 }
 
 .active {
-  color: #B8B8B8;
+  background: none;
   background-color: #E8413C;
 }
 
@@ -54,8 +55,8 @@
   border-radius: 2px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background: linear-gradient(#0000, rgb(0 0 0/20%)) top/100% 800%;
+  color: #EBEBEB;
   background-color: #E8413C;
-  color: #B8B8B8;
 }
 .login-logout:hover {
   background-position: bottom;
