--- a/client/Components/Guides/Guide.css
+++ b/client/Components/Guides/Guide.css
@@ -1,6 +1,6 @@
 .guide-title {
   width: 100%;
-  height: 110px;
+  height: 85px;
   padding-left: 25%;
   position: relative;
   display: flex;
@@ -8,30 +8,30 @@
   align-items: center;
 }
 
-.guide-back-btn {
-  position: absolute;
-  top: 25px;
-  left: 5%;
-}
-
 .guide-body {
   width: 100%;
   padding-left: 3%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: relative;
 }
 
 #guide-filters {
   height: fit-content;
-  width: 27%;
+  width: 22%;
   gap: 5px;
   position: sticky;
   top: 20px;
-  margin-top: 25px;
   padding: 20px 0;
-  color: #B8B8B8;
-  background-color: #577993;
+  /* color: #B8B8B8; */
+  /* background-color: #577993; */
+}
+
+#clear-btn {
+  font-size: 12pt;
+  font-weight: 400;
+  padding: 5px 12px;
+  margin: 2px;
 }
 
 .guide-results {
@@ -44,8 +44,8 @@
   width: 94%;
   padding: 0 calc(3% + 15px);
   pointer-events: none;
-  color: #B8B8B8;
-  background-color: #1E4E73;
+  color: #EBEBEB;
+  background-color: #286A9C;
 }
 
 .guide-result {
@@ -56,7 +56,7 @@
   text-align: center;
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 1.5fr;
+  grid-template-columns: 1.75fr 1.35fr;
   grid-auto-columns: 1fr;
   align-items: center;
   padding: 9px 15px 9px;
@@ -64,21 +64,20 @@
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
-  color: #1E4E73;
+  color: #286A9C;
   background-color: inherit;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
 .result-name {
   font-weight: 700;
-  font-size: 15pt;
+  font-size: 20pt;
 }
 
 .guide-result:hover {
   width: 95%;
-  height: 55px;
+  min-height: 55px;
 }
-
-
 
 .monster-popup {
   position: fixed;
