--- a/client/Components/Nav/Footer.css
+++ b/client/Components/Nav/Footer.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #B8B8B8;
+  color: #EBEBEB;
   background-color: #13324A;
 }
 
@@ -32,6 +32,7 @@
 
 .social-img {
   height: 40px;
-  border: 3px black solid;
+  border: 1px #EBEBEB solid;
   border-radius: 50%;
+  background-color: #EBEBEB;
 }
