--- a/client/Components/Nav/Nav.css
+++ b/client/Components/Nav/Nav.css
@@ -1,13 +1,13 @@
 #main-nav {
   width: 100%;
-  height: 75px;
+  height: 65px;
   padding: 0 15px;
   font-size: 22px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: #E8413C 2px solid;
-  color: #B8B8B8;
+  color: #EBEBEB;
   background-color: #13324A;
   font-family: 'MedievalSharp', sans-serif;
 }
@@ -25,23 +25,40 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  box-shadow: none;
   border-radius: 2px 2px 0 0;
-  color: #B8B8B8;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s ease all;
+  box-shadow: none !important;
+  background: linear-gradient(#0000, rgb(0 0 0/15%)) top/100% 800%;
+  color: #EBEBEB;
   background-color: inherit;
 }
 
+.nav-links:hover {
+  background-position: bottom;
+  background-color: #E8413C;
+}
+
 .active {
-  color: #13324A;
+  background: none;
   background-color: #E8413C;
 }
 
 .login-logout {
-  height: 40px;
+  height: 35px;
+  padding: 0 20px;
+  text-align: center;
+  text-decoration: none;
   font-size: 20px;
   font-weight: bold;
+  font-family: 'MedievalSharp', sans-serif;
   margin-left: 20px;
+  border-radius: 2px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  color: #B8B8B8;
-  border: 3px solid #E8413C;
+  background: linear-gradient(#0000, rgb(0 0 0/20%)) top/100% 800%;
+  color: #EBEBEB;
+  background-color: #E8413C;
+}
+.login-logout:hover {
+  background-position: bottom;
 }
