--- a/client/index.css
+++ b/client/index.css
@@ -46,81 +46,54 @@
   font-weight: 600;
 }
 
+/* Button stylings */
 .btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
   -webkit-transition: 0.3s all ease;
   transition: 0.3s ease all;
+  border: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   border-radius: 2px;
+  background: linear-gradient(#0000, rgb(0 0 0/50%)) top/100% 800%;
+  color: #EBEBEB;
+}
+.btn:hover {
+  cursor: pointer;
+  background-position: bottom;
 }
 
 .btn-type-1 {
-  border: 3px solid #E8413C;
-  padding: 5px 22px;
-}
-.btn-type-1-hover {
-  color: inherit;
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-}
-.btn-type-1-hover:hover {
-  background-color: #E8413C;
-  color: #13324A;
-}
-.btn-type-1:focus {
-  background-color: #E8413C;
-  color: #13324A;
+  font-size: 16pt;
+  font-weight: 600;
+  padding: 10px 23px;
 }
 
 .btn-type-2 {
   font-size: 14pt;
   font-weight: 600;
-  border: 4px solid #13324A;
-  padding: 5px 15px 3px;
-  background-color: inherit;
+  padding: 7px 15px;
   margin: 5px;
 }
-/* .btn-type-2-hover {
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-} */
-.btn-type-2:hover {
-  background-color: #13324A;
-  color: #B8B8B8;
-}
-/* .btn-type-2:focus {
-  background-color: #13324A;
-  color: #B8B8B8;
-} */
 
-.btn-type-3 {
-  font-size: 14pt;
-  font-weight: 600;
-  border: 4px solid #08A045;
-  padding: 5px 15px 3px;
-  background-color: inherit;
+.btn-color-1 {
+  background-color: #3385C4;
 }
-.btn-type-3-hover {
-  text-decoration: none;
-  margin: 5px;
+
+.btn-color-2 {
+  background-color: #3C9EE8;
 }
-.btn-type-3-hover {
-  border-radius: 2px;
-  position: relative;
-  color: inherit;
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s ease all;
-  cursor: pointer;
-}
-.btn-type-3-hover:hover {
+
+.btn-color-3 {
   background-color: #08A045;
-  color: #B8B8B8;
 }
-.btn-type-3:focus {
-  background-color: #08A045;
-  color: #B8B8B8;
+
+.back-btn {
+  position: absolute;
+  left: 40px;
+  top: 15px;
 }
 
 .create-btn {
@@ -136,13 +109,15 @@
   pointer-events: none;
 }
 
+
+/* Logo stylings */
 .small-logo {
   height: 40px;
   margin-right: 7px;
 }
 
 .medium-logo {
-  height: 60px;
+  height: 50px;
   margin-right: 10px;
 }
 
@@ -150,14 +125,27 @@
   height: 90px;
 }
 
-form {
+
+/* Form stylings */
+.vertical-form {
   font-size: 15pt;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: fit-content;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
+}
+
+.horizontal-form {
+  width: 100%;
+  padding: 0 10px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 15px;
+  text-align: center;
 }
 
 .form-header {
@@ -165,38 +153,155 @@ form {
   font-weight: 600;
 }
 
+/* Form basics and colors setup */
 .form-piece{
-  width: 75%;
-  margin-bottom: 15px;
+  position: relative;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.form-piece-split {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.form-piece > input, .form-piece > select {
-  font-size: 11pt;
-  padding: 6px;
-  border: 5px solid #13324A;
-  color: #B8B8B8;
-  background-color: inherit;
+.form-input-split {
+  position: relative;
 }
 
-.form-piece > input:focus, .form-piece > select:focus {
-  outline: none;
-}
-
-.form-piece > label {
-  margin-left: 12px;
-}
-
-.form-piece > input::placeholder {
-  color: #B8B8B8;
-}
-
-option {
+.form-dash {
+  width: 5px;
+  height: 3px;
+  margin: 0 5px 0 15px;
   background-color: #13324A;
 }
 
+.form-input {
+  border: none;
+  border-bottom: 0.125rem solid #13324A;
+}
+
+.form-piece-underlined > .form-input {
+  background-color: inherit;
+  color: #EBEBEB;
+}
+.form-piece-filled > .form-input {
+  color: black;
+  background-color: #13324A30;
+}
+
+.form-label {
+  position: absolute;
+  transition: top .2s;
+  cursor: text;
+}
+
+.form-piece-underlined > .form-label {
+  color: #EBEBEB;
+}
+.form-piece-filled > .form-label {
+  color: #13324A;
+}
+
+.form-input:hover, option {
+  background-color: #286A9C60;
+}
+.form-input:focus, .form-select:focus {
+  outline: none;
+  border-color: #3C9EE8;
+}
+.form-input:focus + .form-label{
+  color: #3C9EE8;
+}
+.form-input:focus + .form-label,
+.form-input:valid + .form-label {
+  top: 0;
+  font-size: 0.9375rem;
+}
+
+/* Form sizes setup */
+.vertical-form {
+  & .form-piece {
+    width: 17rem;
+    margin-bottom: 1.5rem;
+  }
+
+  & .form-input-split {
+    width: 45%;
+  }
+  
+  & .form-input {
+    width: 100%;
+    height: 1.3rem;
+    line-height: 145%;
+    font-size: 1.05rem;
+    padding-left: 0.75rem;
+    padding-top: 1.2rem;
+    padding-bottom: 0.5rem;
+  }
+  
+  & .form-label {
+    top: 0.9375rem;
+    left: 0.875rem;
+    line-height: 145%;
+  }
+  
+  & select.form-input {
+    height: 3.2rem;
+    width: 105%;
+    padding-left: .35rem;
+  }
+}
+
+.horizontal-form {
+  & .form-piece {
+    width: 14rem;
+    margin-bottom: .4rem;
+  }
+  
+  & .form-input-split {
+    width: 45%;
+  }
+
+  & .form-input {
+    width: 100%;
+    height: 1.1rem;
+    line-height: 105%;
+    font-size: 1.05rem;
+    padding-left: 0.55rem;
+    padding-top: 1rem;
+    padding-bottom: 0.3rem;
+  }
+  
+  & .form-label {
+    top: 0.65rem;
+    left: 0.55rem;
+    line-height: 105%;
+  }
+  
+  & select.form-input {
+    height: 2.7rem;
+    width: 105%;
+    padding-left: .25rem;
+  }
+
+  & .form-piece-textarea {
+    width: 60%;
+  }
+  
+  & .form-piece-textarea > form-piece {
+    width: 100%
+  }
+  
+  & textarea.form-input  {
+    min-height: 40px;
+    max-height: 100px;
+    max-width: 100%;
+    min-width: 100%;
+  }
+}
+
+/* Collections styling */
 .collections-display {
   width: 100%;
   display: flex;
@@ -217,12 +322,13 @@ option {
   padding: 20px 0;
   text-align: center;
   font-size: 18pt;
-  border-radius: 7px;
+  font-weight: 600;
+  border-radius: 4px;
   gap: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   z-index: 2;
   color: black;
-  background-color: #B8B8B8;
+  background-color: #EBEBEB;
 }
 
 .dashboard {
@@ -238,7 +344,8 @@ option {
 .dashboard-item {
   min-height: 250px;
   width: 400px;
-  padding: 5px 20px 0;
+  padding: 55px 20px 0;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -247,5 +354,33 @@ option {
   font-size: 16pt;
   border-radius: 3px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #B8B8B8;
+  background-color: #EBEBEB;
+}
+
+.dashboard-head {
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #EBEBEB;
+  background-color: #286A9C;
+}
+
+.new-sections {
+  width: 75%;
+  padding: 65px 20px 0;
+  margin: 10px 0;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 16pt;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: #EBEBEB;
 }
