--- a/client/Components/EncounterNew/EncounterNew.css
+++ b/client/Components/EncounterNew/EncounterNew.css
@@ -38,7 +38,7 @@
 
 #progress-bar {
   z-index: 2;
-  background-color: green;
+  background-color: #3C9EE8;
 }
 
 .empty {
@@ -53,7 +53,7 @@
   width: calc(66% - 35px);
 }
 
-.complete {
+.end {
   width: calc(100% - 60px);
 }
 
@@ -71,15 +71,21 @@
 .circle {
   height: 30px;
   width: 30px;
+  padding-top: 2px;
+  padding-right: 1px;
   border: 5px solid grey;
   border-radius: 50%;
-  color: white;
-  font-size: 20pt;
+  color: #DCEBF9;
+  font-size: 18pt;
   text-align: center;
-  background-color: white;
+  background-color: #DCEBF9;
 }
 
-.active {
+#current {
+  border-color: #3C9EE8;
+}
+
+.complete {
   color: green;
   border-color: green;
 }
@@ -92,346 +98,109 @@
   justify-content: space-evenly;
 }
 
-.ne-buttons {
-  height: 15px;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-weight: 500;
-  color: white;
-  border: 2px solid black;
-  background-color: blue;
-}
-
-.encounter-selection {
-  height: 90%;
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.new-encounter-title {
-  position: absolute;
-  top: 20px;
-}
-
-.new-encounter-info {
-  height: 100%;
-  width: 60%;
-  padding: 60px 20px 10px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 15px;
-}
-
-.ne-info-breakdowns {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 15px;
-}
-
-#ne-basic-info {
-  height: 75%;
-  width: 45%;
-}
-
-#ne-extra-info {
-  height: 85%;
-  width: 45%;
-}
-
-#ne-name-input {
-  width: 50%;
-}
-
-#ne-desc-input {
-  width: 50%;
-  height: 100px;
-}
-
 .new-encounter-selections {
-  height: 100%;
   width: 100%;
-  padding: 55px 35% 10px 20px;
-  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: space-evenly;
+  padding-top: 35px;
 }
 
-.new-displayed-characters {
-  height: 100%;
-  width: 80%;
+.ne-player-table {
+  width: 60%;
+}
+
+.ne-monster-display {
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
-  overflow: auto;
-  background-color: red;
 }
 
-.new-encounter-player-card {
-  height: 100px;
-  width: 95%;
-  margin: 10px;
-  padding: 0 10px;
-  display: flex;
-  justify-content: space-between;
+#search-monsters {
+  justify-content: center;
+}
+
+.ne-monster-table {
+  width: 100%;
+}
+
+#ne-character-head {
+  height: 55px;
+  pointer-events: none;
+  color: #EBEBEB;
+  background-color: #286A9C;
+}
+
+.ne-character-row {
+  min-height: 50px;
+  padding: 5px 12px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 2fr 2fr;
+  grid-auto-columns: 1fr;
   align-items: center;
-  background-color: orange;
+  position: relative;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: 600;
+  border-bottom: 3px solid #286A9C;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
-#new-player-name {
-  width: 40%;
-}
-
-#new-player-hp {
-  width: 30%;
-  text-align: right;
+.ne-character-row td {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .new-added {
-  height: 85%;
-  width: 35%;
-  padding: 15px 10px;
-  position: absolute;
-  right: 30px;
-  top: 55px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-  overflow: auto;
-  background-color: orange;
+  width: 33%;
 }
 
-.new-add-player-card {
-  height: 80px;
-  width: 80%;
-  padding: 0 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: red;
-}
-
-.new-encounter-monster-card {
+.new-added-row {
   min-height: 50px;
-  width: 95%;
-  margin: 0 0 5px;
-  padding: 0 10px;
-  display: flex;
-  justify-content: space-between;
+  padding: 10px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 2fr 2fr;
+  grid-auto-columns: 1fr;
   align-items: center;
-  background-color: orange;
-}
-
-#added-monster-display {
-  width: 90%;
-}
-
-.new-add-monster-card {
-  width: 100%;
-  background-color: blue;
-}
-
-.new-encounter-review {
-  height: 100%;
-  width: 30%;
-  padding: 50px 10px 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.displayed {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-#search-monsters {
-  width: 90%;
-  height: 30px;
-  background-color: orange;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-#search-monsters-input {
-  width: 50%;
-}
-
-#displayed-monsters {
-  width: 95%;
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-  background-color: brown;
-}
-
-#displayed-players {
-  width: 95%;
-  height: 80%;
-  padding: 5px;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  overflow: auto;
-  background-color: green;
-}
-
-#added-characters {
-  height: 100%;
-  width: 30%;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: purple;
-}
-
-.added-display {
-  width: 100%;
-  height: 40%;
-  background-color: aquamarine;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-}
-
-.added {
-  min-height: 30px;
-  width: 90%;
-  padding: 0px 7px;
-  margin-bottom: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: white;
-}
-
-#monsters-selection {
   position: relative;
-  padding-top: 120px;
+  text-align: center;
+  font-size: 13pt;
+  font-weight: 600;
+  border-bottom: 3px solid #286A9C;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
-#search-monsters {
-  height: 100px;
-  width: 50%;
-  position: absolute;
-  top: 5px;
-}
-
-.added-monster-name {
-  width: 60%;
-}
-
-.added-monster-amount {
-  width: 20%;
-  text-align: right;
-}
-
-#encounter-builder-buttons-div {
-  width: 90%;
+.new-added-head {
+  height: 55px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-}
-
-.encounter-builder-buttons {
-  height: 20px;
-  display: flex;
   justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: white;
-  border: 2px solid black;
-  background-color: blue;
+  font-size: 15pt;
+  color: #EBEBEB;
+  background-color: #286A9C;
 }
 
-/* this is standin */
-
-#encounter-summary {
-  min-height: calc(100vh - 200px);
-  width: 100%;
-  padding: 50px 10px 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 25px;
-  background-color: orange;
-  margin-bottom: 25px;
+.none-added-row {
+  height: 50px;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: 600;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
-.summary-top {
-  width: 90%;
+.none-added-row td {
+  padding-top: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.encounter-base-info {
-  height: 150px;
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: pink;
-}
-
-.summary-top-buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.summary-added {
+.ne-summary {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
-}
-
-.encounter-added {
-  width: 45%;
-  display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 0;
-  gap: 10px;
-  background-color: blue;
-}
-
-.encounter-monster-short {
-  height: 100px;
-  width: 90%;
-  margin: 5px 0;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: beige;
-}
-
-.monster-base-info {
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
