--- a/client/Components/Guides/Guide.css
+++ b/client/Components/Guides/Guide.css
@@ -41,17 +41,15 @@
 
 #guide-result-head {
   height: 65px;
-  width: 94%;
-  padding: 0 calc(3% + 15px);
   pointer-events: none;
   color: #EBEBEB;
   background-color: #286A9C;
 }
 
 .guide-result {
-  width: 88%;
+  width: 92%;
   min-height: 50px;
-  margin: 15px auto;
+  margin: 0 auto;
   font-size: 16pt;
   text-align: center;
   display: grid;
@@ -62,10 +60,10 @@
   padding: 9px 15px 9px;
   transition: all .5s ease;
   cursor: pointer;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   color: #286A9C;
   background-color: inherit;
+  border-bottom: 3px solid #286A9C;
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -75,124 +73,6 @@
 }
 
 .guide-result:hover {
-  width: 95%;
+  width: 96%;
   min-height: 55px;
-}
-
-.monster-popup {
-  position: fixed;
-  top: 15%;
-  left: 10%;
-  width: 80%;
-  max-height: 70%;
-  overflow: auto;
-  padding: 25px 35px;
-  background-image: url('../../images/paper-background.jpeg');
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: top;
-  background-repeat: no-repeat;
-  box-shadow: 0 0 50px 40px black;
-  z-index: 8;
-}
-
-.splitter {
-  height: 5px;
-  width: 95%;
-  margin: 10px 2.5%;
-  background-color: #1E4E73;
-  border-radius: 50%;
-}
-
-.view-specs {
-  height: 25px;
-  padding: 0 15px;
-  position: absolute;
-  top: 20px;
-  right: 55px;
-  cursor: pointer;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-  color: #B8B8B8;
-  background-color: #1E4E73;
-}
-
-.close-info-button {
-  width: 25px;
-  height: 25px;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  border-radius: 50%;
-  border: 2px solid black;
-  background-color: inherit;
-  cursor: pointer;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.monster-header {
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.monster-name {
-  margin-right: 3px;
-}
-
-.monster-desc {
-  margin-top: 5px;
-  width: 100%;
-}
-
-.monster-base-info {
-  width: 100%;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.monster-main-skills {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  align-content: space-between;
-  flex-wrap: wrap;
-  margin: 5px 0;
-}
-
-.monster-sub-skills {
-  min-height: 85px;
-  padding: 10px 0;
-}
-
-.monster-specials {
-  height: fit-content;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.monster-actions {
-  height: fit-content;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.monster-legendary-actions {
-  height: fit-content;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 }
