--- a/client/Components/Trackers/TrackersDisplay.css
+++ b/client/Components/Trackers/TrackersDisplay.css
@@ -1,33 +1,46 @@
-.monster-tracker-display {
-  min-height: 160px;
-  width: 90%;
-  margin: 10px 0;
-  padding: 5px 10px;
-  position: relative;
+.tracker-display {
+  width: 80%;
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  background-color: orange;
+  flex-direction: column;
+  align-items: center;
 }
 
-.monster-tp-name {
+.tracker-table {
   width: 100%;
-  margin: 20px 0;
-  text-align: center;
+  margin-top: 25px;
+}
+
+#tracker-head {
+  height: 55px;
+  pointer-events: none;
+  color: #EBEBEB;
+  background-color: #286A9C;
 }
 
 .tracker {
-  min-height: 150px;
-  min-width: 160px;
-  max-width: 260px;
-  margin: 5px;
-  padding-right: 10px;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
+  min-height: 50px;
+  padding: 5px 12px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1.25fr 3fr 1fr .5fr;
   align-items: center;
-  justify-content: space-evenly;
-  background-color: #420C14;
+  position: relative;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: 600;
+  border-bottom: 3px solid #286A9C;
+  font-family: 'MedievalSharp', sans-serif;
+}
+
+.inititiative-thing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12pt;
+}
+
+.tracker-name {
+  cursor: pointer;
 }
 
 .health-display {
@@ -38,50 +51,19 @@
   justify-content: space-evenly;
 }
 
-.health-updater {
-  margin-top: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.health-updater-input {
-  width: 40%;
-  text-align: right;
-}
-
-.turn {
-  border: 7px solid purple;
-  box-shadow: inset 0 0 25px black;
-}
-
-.tracker-health {
-  width: 90%;
-  text-align: center;
-}
-
-.tracker-input {
-  width: 40%;
-  text-align: center;
-}
-
-.tracker-initiative {
-  width: 60%;
-  text-align: center;
-}
-
 .info-button {
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 5px;
+  top: 15px;
   border-radius: 50%;
-  border: 2px solid white;
-  background-color: inherit;
-  color: white;
+  border: 2px solid #286A9C;
+  background-color: #286A9C;
+  color: #EBEBEB;
   cursor: pointer;
-  font-weight: 700;
+  font-weight: 500;
+  font-family: inherit;
   display: flex;
   align-items: center;
   justify-content: center;
