--- a/client/Components/EncounterNew/EncounterNew.css
+++ b/client/Components/EncounterNew/EncounterNew.css
@@ -105,6 +105,19 @@
   padding-top: 35px;
 }
 
+.create-new-char-form {
+  height: 400px;
+  width: 600px;
+  padding-top: 95px;
+  position: absolute;
+  top: 50px;
+  background-color: #EBEBEB;
+  border-bottom: 3px solid #286A9C;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  z-index: 50;
+  overflow-y: auto;
+}
+
 .ne-player-table {
   width: 60%;
 }
@@ -147,7 +160,7 @@
   font-family: 'MedievalSharp', sans-serif;
 }
 
-.ne-character-row td {
+.ne-character-row td, .ne-character-row th {
   display: flex;
   align-items: center;
   justify-content: center;
