--- a/client/Components/Nav/Footer.css
+++ b/client/Components/Nav/Footer.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   color: #EBEBEB;
-  background-color: #13324A;
+  background-color: #040114;
 }
 
 #copyright-stuff {
