--- a/client/index.css
+++ b/client/index.css
@@ -5,7 +5,7 @@
   max-width: 100vw;
   font-family: 'Josefin Sans', sans-serif;
   position: relative;
-  background-color: #DCEBF9;
+  background-color: #cde3f1;
 }
 
 * {
@@ -31,7 +31,7 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  background-color: #DCEBF9;
+  background-color: #cde3f1;
 }
 
 .page-layout-2 {
@@ -43,7 +43,7 @@
   flex-direction: column;
   align-items: center;
   gap: 5px;
-  background-color: #DCEBF9;
+  background-color: #cde3f1;
 }
 
 .hide-scroll {
@@ -156,6 +156,12 @@
   position: absolute;
   right: 40px;
   top: 15px;
+}
+
+.create-btn-2 {
+  position: absolute;
+  right: 15px;
+  top: 5px;
 }
 
 .unavailable {
@@ -410,16 +416,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 20px 0;
+  padding: 10px 0;
   text-align: center;
   font-size: 18pt;
   font-weight: 600;
-  border-radius: 4px;
+  border-radius: 5px;
   gap: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.16), 5px 15px 25px rgba(0, 0, 0, 0.1);
   z-index: 2;
-  color: black;
-  background-color: #EBEBEB;
+  color: #ffffff;
+  position: relative;
+}
+
+.collections-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: .9;
+  z-index: -1;
+  border-radius: inherit;
 }
 
 .dashboard {
