--- a/client/Components/Popout/Popout.css
+++ b/client/Components/Popout/Popout.css
@@ -7,8 +7,8 @@
   max-height: 100%;
   overflow: auto;
   padding: 45px 35px 25px;
-  background-color: #DCEBF9F3;
-  border-left: 10px solid #1E4E73;
+  background-color: #cde3f1ee;
+  border-left: 10px solid #002d45;
   z-index: 8;
 }
 
@@ -16,7 +16,7 @@
   height: 5px;
   width: 95%;
   margin: 10px 2.5%;
-  background-color: #1E4E73;
+  background-color: #002d45;
   border-radius: 50%;
 }
 
@@ -31,8 +31,8 @@
   display: flex;
   align-items: center;
   border-radius: 10px;
-  color: #EBEBEB;
-  background-color: #1E4E73;
+  color: #ffffff;
+  background-color: #166696;
 }
 
 .close-info-button {
@@ -42,7 +42,7 @@
   right: 20px;
   top: 20px;
   border-radius: 50%;
-  border: 2px solid black;
+  border: 2px solid #040114;
   background-color: inherit;
   cursor: pointer;
   font-weight: 700;
