--- a/client/Components/DeletePopup/DeletePopup.css
+++ b/client/Components/DeletePopup/DeletePopup.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: space-evenly;
   position: relative;
-  background-color: #EBEBEB;
+  background-color: #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
