--- a/client/Components/Encounters/Encounter.css
+++ b/client/Components/Encounters/Encounter.css
@@ -21,13 +21,15 @@
 
 #tracker-head {
   height: 55px;
-  color: #EBEBEB;
   cursor: default;
-  background-color: #286A9C;
+  border-radius: 3px 3px 0 0;
+  background-color: #166696;
+  border: none;
+  color: #ffffff;
 }
 
 .tracker {
-  min-height: 50px;
+  min-height: 30px;
   padding: 5px 12px;
   display: grid;
   grid-auto-flow: column;
@@ -35,9 +37,9 @@
   align-items: center;
   position: relative;
   text-align: center;
-  font-size: 16pt;
   font-weight: 600;
-  border-bottom: 3px solid #286A9C;
+  border-bottom: 3px solid #002d45;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -45,7 +47,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12pt;
 }
 
 .tracker-name {
@@ -59,11 +60,10 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 2px solid #286A9C;
-  background-color: #286A9C;
-  color: #EBEBEB;
+  border: 2px solid #166696;
+  background-color: #166696;
+  color: #ffffff;
   cursor: pointer;
-  font-size: 13px;
   font-weight: 500;
   font-family: inherit;
   display: flex;
