--- a/client/Components/Home/Home.css
+++ b/client/Components/Home/Home.css
@@ -6,20 +6,12 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 2em;
   font-family: 'MedievalSharp', sans-serif;
-  background-color: black;
+  background-color: #040114;
 }
 
 .opac-box {
-  font-size: 84pt;
-  color: #EBEBEB;
-  z-index: 2;
-}
-
-.opener-tagline {
-  font-size: 64pt;
-  color: #EBEBEB;
+  color: #ffffff;
   z-index: 2;
 }
 
@@ -34,7 +26,6 @@
 #home-site-description {
   width: 90%;
   text-align: center;
-  font-size: 20pt;
   display: flex;
   flex-direction: column;
   align-items: center;
