--- a/client/Components/Login/Signup-Login.css
+++ b/client/Components/Login/Signup-Login.css
@@ -8,21 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(-45deg, #1E4E73, #3385C4, #286A9C);
-	background-size: 300% 300%;
-	animation: gradient 12s ease infinite;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  background-image: url('../../images/login-img.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .login-form-container {
@@ -30,34 +19,29 @@
   width: 80%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: #002d45d0;
+}
+
+.logo-wrap {
+  height: 55%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-decoration: none;
+  padding-bottom: 50px;
+  color: #ffffff;
 }
 
 #login-form {
   height: 100%;
-  width: 50%;
+  width: 40%;
   padding: 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  color: #EBEBEB;
-  background-color: #577993;
-}
-
-.login-image {
-  height: 100%;
-  width: 50%;
-  padding: 5%;
-  font-size: 44pt;
-  font-weight: 700;
-  line-height: 70px;
-  text-align: center;
-  color: #EBEBEB;
-  background-image: url('../../images/login-img.jpg');
-  background-position: center;
-  background-size: cover;
-  box-shadow: inset 0 0 0 1000px rgb(107,119,141, .6);
-  overflow: hidden;
+  color: #ffffff;
 }
