--- a/client/Components/Nav/Footer.css
+++ b/client/Components/Nav/Footer.css
@@ -1,26 +1,28 @@
 #main-footer {
-  height: 75px;
+  height: 50px;
   width: 100%;
-  padding: 0 25px 0 15px;
+  padding: 0 25px 5px 15px;
   position: absolute;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #EBEBEB;
-  background-color: #040114;
+  color: #ffffff;
+  background-color: #002d45;
 }
 
 #copyright-stuff {
   height: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: center;
   flex-wrap: wrap;
 }
 
 #social-section {
   display: flex;
+  align-items: center;
   gap: 8px;
 }
 
@@ -31,8 +33,8 @@
 }
 
 .social-img {
-  height: 40px;
-  border: 1px #EBEBEB solid;
+  height: 25px;
+  border: 1px #ffffff solid;
   border-radius: 50%;
-  background-color: #EBEBEB;
+  background-color: #ffffff;
 }
