--- a/client/Components/Nav/Nav.css
+++ b/client/Components/Nav/Nav.css
@@ -1,13 +1,12 @@
 #main-nav {
   width: 100%;
-  height: 65px;
+  height: 55px;
   padding: 0 25px;
-  font-size: 22px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: #ffffff;
-  background-color: #040114;
+  background-color: #002d45;
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -17,48 +16,45 @@
   align-items: center;
 }
 
-.nav-links {
+.nav-links-wrapper {
   height: 100%;
-  padding: 0 25px;
+  padding: 0 5px;
+  display: flex;
+  align-items: center;
+}
+
+.nav-links {
   text-align: center;
   text-decoration: none;
   display: flex;
   align-items: center;
-  border-radius: 2px 2px 0 0;
+  padding: 5px 8px;
+  border-radius: 4px;
   -webkit-transition: 0.3s all ease;
   transition: 0.3s ease all;
   box-shadow: none !important;
   background: linear-gradient(#0000, rgb(0 0 0/15%)) top/100% 800%;
-  color: #cde3f1;
+  color: #ffffff;
   background-color: inherit;
-  box-sizing: border-box;
 }
 
-.nav-links.active {
-  border-bottom: #FFFFFF 5px solid;
-  color: #ffffff;
+.nav-links-wrapper:has(.nav-links.active) {
+  border-bottom: #ffffff 5px solid;
+  border-top: #002d45 5px solid;
 }
 
 .nav-links:hover {
   background-position: bottom;
   background-color: #6a6b6a;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .login-logout {
-  height: 35px;
+  height: 30px;
   padding: 0 20px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 20px;
   font-weight: bold;
   font-family: 'MedievalSharp', sans-serif;
   margin-left: 20px;
-  border-radius: 2px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(#0000, rgb(0 0 0/20%)) top/100% 800%;
-  color: #EBEBEB;
-  background-color: #E8413C;
 }
 .login-logout:hover {
   background-position: bottom;
