--- a/client/index.css
+++ b/client/index.css
@@ -50,20 +50,6 @@
   overflow-y: hidden;
 }
 
-.title-1 {
-  font-size: 32pt;
-  font-weight: 700;
-}
-
-.title-2 {
-  font-size: 26pt;
-  font-weight: 700;
-}
-
-.title-3 {
-  font-size: 20pt;
-  font-weight: 600;
-}
 
 /* Button stylings */
 .btn {
@@ -77,7 +63,7 @@
   text-decoration: none;
   border-radius: 2px;
   background: linear-gradient(#0000, rgb(0 0 0/50%)) top/100% 800%;
-  color: #EBEBEB;
+  color: #ffffff;
 }
 .btn:hover {
   cursor: pointer;
@@ -85,46 +71,48 @@
 }
 
 .btn-type-1 {
-  font-size: 16pt;
   font-weight: 600;
-  padding: 10px 23px;
+  padding: 5px 20px;
 }
 
 .btn-type-2 {
-  font-size: 14pt;
   font-weight: 600;
-  padding: 7px 15px;
+  padding: 5px 12px;
   margin: 5px;
 }
 
 .btn-type-3 {
-  font-size: 12pt;
   font-weight: 500;
-  padding: 3px 10px;
+  padding: 4px 8px;
   margin: 5px;
 }
 
 .btn-type-4 {
   margin: auto;
-  font-size: 12pt;
   font-weight: 500;
-  padding: 3px 8px;
+  padding: 4px 8px;
 }
 
 .btn-color-1 {
-  background-color: #3385C4;
+  background-color: #166696;
+}
+
+.btn-color-1-outline {
+  border: 2px solid #166696;
+  color: #166696;
+  background: linear-gradient(#0000, rgb(22 102 150/40%)) top/100% 800%;
 }
 
 .btn-color-2 {
-  background-color: #3C9EE8;
+  background-color: #e4c900;
 }
 
 .btn-color-3 {
-  background-color: #08A045;
+  background-color: #00a761;
 }
 
 .btn-color-4 {
-  background-color: red;
+  background-color: #f11e00;
 }
 
 .back-btn {
@@ -171,15 +159,27 @@
   pointer-events: none;
 }
 
+.plaintext-link {
+  color: #60ccfb;
+  text-decoration: none;
+}
+.plaintext-link-dark {
+  color: #057FB3;
+  text-decoration: none;
+}
+.plaintext-link:hover, .plaintext-link-dark:hover {
+  text-decoration: underline;
+}
+
 
 /* Logo stylings */
 .small-logo {
-  height: 40px;
+  height: 35px;
   margin-right: 7px;
 }
 
 .medium-logo {
-  height: 50px;
+  height: 40px;
   margin-right: 10px;
 }
 
@@ -187,27 +187,18 @@
   height: 90px;
 }
 
-.logo-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  text-decoration: none;
-  color: #EBEBEB;
+.xl-logo {
+  height: 120px;
 }
 
+
 /* base input styling */
-.base-input {
-  border: none;
-  border-bottom: 0.125rem solid #13324A;
-  background-color: inherit;
-  font-family: inherit;
-  color: #13324A;
-}
+/* .base-input {
+  color: orange;
+} */
 
 /* Form stylings */
 .vertical-form {
-  font-size: 15pt;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -227,176 +218,48 @@
   text-align: center;
 }
 
-.form-header {
-  font-size: 20pt;
-  font-weight: 600;
-}
-
-/* Form basics and colors setup */
-.form-piece{
-  position: relative;
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-.form-piece-split {
+/* Form input styles */
+.form-piece {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-input-split {
+  flex-direction: column;
   position: relative;
-}
-
-.form-dash {
-  width: 5px;
-  height: 3px;
-  margin: 0 5px 0 15px;
-  background-color: #13324A;
-}
-
-.form-input {
-  border: none;
-  border-bottom: 0.125rem solid #13324A;
-}
-
-.small-input {
-  width: 50px;
-  font-size: large;
-  font-weight: 700;
-  text-align: center;
-}
-
-.medium-input {
-  min-width: 550px;
-  max-width: 550px;
-}
-
-.large-input {
-  min-width: 100%;
-  max-width: 100%;
-}
-
-.large-input textarea {
-  min-width: 100%;
-  max-width: 100%;
-  min-height: 70px;
-  max-height: 150px;
-}
-
-.form-piece-underlined > .form-input {
-  background-color: inherit;
-  color: #EBEBEB;
-}
-.form-piece-filled > .form-input {
-  background-color: #13324A30;
-  color: black;
 }
 
 .form-label {
+  opacity: 0.6;
   position: absolute;
-  transition: top .2s;
+  top: 10px;
+  left: 0px;
+  transition: all 0.2s ease;
+  font-size: 18px;
+  color: #ffffff;
   cursor: text;
-}
-
-.form-piece-underlined > .form-label {
-  color: #EBEBEB;
-}
-.form-piece-filled > .form-label {
-  color: #13324A;
-}
-
-.form-piece:hover .form-input {
-  background-color: #286A9C60;
-}
-.form-input:focus, .form-select:focus {
-  outline: none;
-  background-color: #286A9C40;
-  border: .1rem solid #13324A;
-  border-bottom: 0.125rem solid #13324A;
-}
-.form-input:focus + .form-label{
-  color: #286A9C;
 }
 .form-input:focus + .form-label,
 .form-input:valid:not(.empty-input) + .form-label {
-  top: 2.5px;
-  font-size: 0.8375rem;
-}
-.form-piece-underlined > .form-input:focus + .form-label {
-  color: #A4D1F4;
-}
-
-/* Form sizes setup */
-.vertical-form {
-  & .form-piece {
-    width: 17rem;
-    margin-bottom: 1.5rem;
-  }
-
-  & .form-input-split {
-    width: 45%;
-  }
-  
-  & .form-input {
-    width: 100%;
-    height: 1.3rem;
-    line-height: 145%;
-    font-size: 1.05rem;
-    padding-left: 0.75rem;
-    padding-top: 1.2rem;
-    padding-bottom: 0.5rem;
-  }
-  
-  & .form-label {
-    top: 0.9375rem;
-    left: 0.875rem;
-    line-height: 145%;
-  }
-  
-  & select.form-input {
-    height: 3.2rem;
-    width: 105%;
-    padding-left: .35rem;
-  }
+  opacity: 1;
+  top: -8px;
+  font-size: 60%;
+  transition: all 0.2s ease;
+  font-weight: bold;
 }
 
-.horizontal-form {
-  & .form-piece {
-    width: 14rem;
-    margin-bottom: .4rem;
-  }
-  
-  & .form-input-split {
-    width: 45%;
-  }
-
-  & .form-input {
-    width: 100%;
-    height: 1.1rem;
-    line-height: 105%;
-    font-size: 1.05rem;
-    padding-left: 0.55rem;
-    padding-top: 1rem;
-    padding-bottom: 0.3rem;
-  }
-  
-  & .form-label {
-    top: 0.65rem;
-    left: 0.55rem;
-    line-height: 105%;
-  }
-  
-  & select.form-input {
-    height: 2.7rem;
-    width: 105%;
-    padding-left: .25rem;
-  }
-  
-  & .form-piece-textarea > form-piece {
-    width: 100%
-  }
+.form-input {
+  padding: 5px 5px 8px 0px;
+  font-size: 18px;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 0;
+  border-bottom: 1px solid #ffffff;
+  background-color: inherit;
+  color: #ffffff;
 }
+.form-input:focus {
+  border-bottom: 1px solid #01d99c;
+}
+
 
 /* Collections styling */
 .collections-display {
@@ -410,7 +273,7 @@
 }
 
 .collections {
-  width: 31%;
+  width: 400px;
   min-height: 200px;
   display: flex;
   flex-direction: column;
@@ -418,9 +281,8 @@
   justify-content: space-evenly;
   padding: 10px 0;
   text-align: center;
-  font-size: 18pt;
   font-weight: 600;
-  border-radius: 5px;
+  border-radius: 3px;
   gap: 10px;
   box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.16), 5px 15px 25px rgba(0, 0, 0, 0.1);
   z-index: 2;
@@ -437,6 +299,8 @@
   border-radius: inherit;
 }
 
+
+/* Dashboard styling */
 .dashboard {
   width: 100%;
   display: flex;
@@ -448,88 +312,33 @@
 }
 
 .dashboard-item {
-  min-height: 250px;
+  min-height: 160px;
   width: 400px;
-  padding: 55px 20px 0;
+  padding: 50px 20px 10px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  gap: 25px;
   text-align: center;
-  font-size: 16pt;
-  border-bottom: 3px solid #286A9C;
   border-radius: 3px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #EBEBEB;
+  border-bottom: 1px solid #166696;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .dashboard-head {
-  height: 50px;
+  height: 40px;
   width: 100%;
   position: absolute;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #EBEBEB;
-  background-color: #286A9C;
-}
-
-/* extra selections */
-.extra-selections {
-  min-height: 200px;
-  max-height: 300px;
-  width: 40%;
-  overflow: auto;
-  padding: 65px 20px 10px;
-  gap: 15px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  font-size: 16pt;
-  border-bottom: 3px solid #286A9C;
-  border-radius: 3px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #EBEBEB;
-}
-
-.extra-selections-options {
-  width: 45%;
-  font-size: 18pt;
-  justify-content: space-between;
-  display: flex;
-  align-items: center;
-}
-
-.extra-selections-options p {
-  text-align: center;
-  width: 85%;
-}
-
-.extra-selections-checkbox {
-  width: 20px;
-  height: 20px;
-  border: 0px;
-  font-size: 24pt;
-  cursor: pointer;
-  position: relative;
-  appearance: none;
-  border: 1px solid #286A9C;
-}
-
-.extra-selections-checkbox:checked {
-  color: white;
-  background-color: #286A9C;
-}
-
-.extra-selections-checkbox:checked::before {
-  content: "✓";
-  left: -3px;
-  top: -10px;
-  position: absolute;
+  border-radius: 3px 3px 0 0;
+  background-color: #166696;
+  color: #ffffff;
+  font-family: 'MedievalSharp', sans-serif;
 }
 
 /* breakdown pages styling */
@@ -570,22 +379,22 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 10px;
-  font-size: 16pt;
-  border-bottom: 3px solid #286A9C;
+  border-bottom: 3px solid #166696;
   border-radius: 3px;
-  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .breakdown-head {
-  height: 40px;
+  height: 50px;
   width: 100%;
   position: absolute;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #EBEBEB;
-  background-color: #286A9C;
+  border-radius: 5px 5px 0 0;
+  background-color: #166696;
+  color: #ffffff;
 }
 
 .breakdown-piece {
@@ -618,7 +427,7 @@
 .breakdown-break {
   width: 90%;
   margin: 0 5%;
-  border-bottom: 2px solid #286A9C;
+  border-bottom: 2px solid #166696;
 }
 
 
@@ -639,11 +448,13 @@
   display: flex;
   position: relative;
   gap: 10px;
-  padding: 45px 0px 5px;
+  padding: 55px 0px 15px;
+  border-bottom: 2px solid #166696;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .info-list-full {
-  width: 70%;
+  width: 80%;
 }
 
 .info-list-head {
@@ -654,16 +465,17 @@
   display: flex;
   position: absolute;
   top: 0px;
-  color: rgb(235, 235, 235);
-  background-color: rgb(40, 106, 156);
+  border-radius: 5px 5px 0 0;
+  background-color: #166696;
+  color: #ffffff;
 }
 
 .info-list-item {
   min-height: 30px;
-  width: 100%;
+  width: 85%;
   margin: 5px 0px;
   padding: 0px 20px 5px;
-  border-bottom: 3px solid rgb(40, 106, 156);
+  border-bottom: 1px solid #166696;
 }
 
 /* Accordion styling */
@@ -677,7 +489,7 @@
   
 .accordion-item {
   width: 100%;
-  padding-top: 75px;
+  padding-top: 60px;
   margin-bottom: 15px;
   position: relative;
 }
@@ -691,22 +503,24 @@
   cursor: pointer;
   position: absolute;
   top: 0px;
-  font-size: 25pt;
   font-weight: 700;
   font-family: 'MedievalSharp', sans-serif;
-  color: rgb(235, 235, 235);
-  background-color: rgb(40, 106, 156);
+  border-radius: 3px 3px 0 0;
+  background-color: #166696;
+  color: #ffffff;
   user-select: none;
 }
 
 .accordion-content-wrapper {
   display: grid;
   grid-template-rows: 0fr;
-  transition: grid-template-rows 1s;
+  transition: grid-template-rows 1s, padding 1s;
 }
 
 .accordion-content-expanded {
+  padding: 15px 0 10px;
   grid-template-rows: 1fr;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .accordion-content-wrapper > div {
@@ -724,13 +538,11 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 10px;
-  font-size: 16pt;
 }
 
 .accordion-item-status {
   background-color: inherit;
   border: none;
-  font-size: 20pt;
   font-weight: 700;
   color: inherit;
   position: absolute;
